welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  var T = new Array
  var n : Int = 0
  for (i <- 0 to num){
    n=n+1
  	for (j <- 0 to T(n)){
    	T(j)=n
  	}
  }
  return T(num-1)
}